Update Blog “2020-02-20-with-code”

--- a/_data/blog/2020-02-20-with-code.md
+++ b/_data/blog/2020-02-20-with-code.md
@@ -3,6 +3,7 @@ template: BlogPost
 path: /with-code
 date: 2020-02-20T15:08:12.174Z
 title: Segundo post!!
+metaDescription: prueba
 thumbnail: /assets/image-2.jpg
 ---
 
